testing/tests/ui/broken-config.stderr
error: `$WORKSPACE/target/tests/trybuild/rinja_testing/no-such-config.toml` does not exist
 --> tests/ui/broken-config.rs:4:47
  |
4 | #[template(source = "", ext = "txt", config = "no-such-config.toml")]
  |                                               ^^^^^^^^^^^^^^^^^^^^^

error: unable to read $WORKSPACE/target/tests/trybuild/rinja_testing/folder-config.toml: Is a directory (os error 21)
 --> tests/ui/broken-config.rs:8:47
  |
8 | #[template(source = "", ext = "txt", config = "folder-config.toml")]
  |                                               ^^^^^^^^^^^^^^^^^^^^

error: a delimiter may not be the prefix of another delimiter: "<<<" vs "<<<<"
        --> testing/delim-clash.toml
  --> tests/ui/broken-config.rs:12:47
   |
12 | #[template(source = "", ext = "txt", config = "delim-clash.toml")]
   |                                               ^^^^^^^^^^^^^^^^^^

error: delimiters must be at least two characters long: "<"
        --> testing/delim-too-short.toml
  --> tests/ui/broken-config.rs:16:47
   |
16 | #[template(source = "", ext = "txt", config = "delim-too-short.toml")]
   |                                               ^^^^^^^^^^^^^^^^^^^^^^
